--- a/Arbeit/Arbeit.tex
+++ b/Arbeit/Arbeit.tex
@@ -1,9 +1,10 @@
 \documentclass [a4paper, 11pt] {article}
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{eurosym}
 \usepackage{textgreek}
-
+\usepackage{amsmath}
 \begin{document}
 \tableofcontents
 \newpage
@@ -36,19 +37,11 @@ Diese physikalischen Aspekte haben wir in unserem Programm folgendermaßen umges
 \subsection{Programm}
 \subsection{Aufbau und Montage}
 \subsection{Welche midestgeschwindigkeit wird gebraucht?}
-Das menschliche Auge hat eine Bildwiederholfrequenz von durchschnittlich 20 - 30Hz. Der Reifen müsste sich also für ein stehendes Bild bei einem LED Streifen mindestens 20 mal in der Sekunde drehen, da dies jedoch nicht sehr Realistisch ist Unser Rad hätte mit schlauch einen durchmesser von ca. 610mm daraus haben wir mit folgender Formel den Umfang berrechnet:
-\begin{center}
-
-$ U = \pi * d $
-
-$ U = \pi * 61cm$ 
-
-$ U \approx 191,6cm$
-\end{center}
-Mit diesem kann man nun die Geschwindikkeit, die das Fahrrad 
-
-
-
+Das menschliche Auge nimmt Bilder in einer Frequenz f\textsubscript{Auge} von 10 bis 12Hz auf\textsuperscript{18}. Um die Geschwindigkeit bei 10-12Hz zu berechnen, verwenden wir . Auf die Kreisbewegung angewandt entspr"ache dies $v = \frac{2\pi r}{T}$. Da $\frac{1}{T}$ der Frequenz entspricht, der Umrechnungsfaktor von $\frac{m}{s}$ in $\frac{km}{h}$ 3,6 ist und $d = 2 \cdot r$ gilt, erhalten wir die Formel $v = \pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6$. Durch das Anbringen der vier Streifen am Rad ben"otigen wir nur ein viertel der urspr"ungliche Geschwindigkeit. Demnach gilt: 
+\begin{align}
+v = \frac{\pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6}{4}
+\end{align}
+Die Mindestgeschwindigkeit betr"agt rund $v \approx 17\frac{km}{h}$.
 \section{Ergebnis}
 Uns ist es gelungen, eine interaktivere, stilvollere und zum gleichen Maße sichere Lösung, im Vergleich zu einer Warnweste zu bauen. Es ist damhingehend stilvoller, da man mit diesem Speichendisplay jedes Bild seiner Wahl anzeigen lassen kann, welches zusätzlich die Sicherheit eines Fahrradfahrers erhöht.
 Unser Speichendisplay ist dazu noch günstiger als vergleichbare Modelle. Wie man anhand der Auflistung der Kosten für Materialien sieht, beschränken sich die Materialkosten auf nur 113,07 \euro\ (siehe Anhang Tab. 1). Aufgrund der Trägheit des Auges des Betrachters und der konstant hohen Geschwindigkeit des Rades, entsteht für den Betrachter der Eindruck eines ruhenden Bildes. Somit gelingt es uns, ein scheinbar ruhendes Bild auf dem Speichendisplay zu produzieren. Es ist uns damit auch gelungen, ein Stoppschild und andere Verkehrszeichen auf dem Speichendisplay anzuzeigen.
@@ -64,4 +57,16 @@ Alles in allem ist das Speichendisplay eine interaktive, multifunktionale, koste
 \section{Danksagungen}
 Wir vom Projekt ?Speichendisplay? bedanken uns sehr bei der Fahrradwerkstatt der Holzkirche Lichterfelde für die Spende einer Fahrradgabel, ohne die unser Projekt nicht möglich gewesen wäre. Ebenfalls bedanken wir uns bei unserem Betreuer René Gorriz, der uns bei unserem Projekt tatkräftig unterstützt.
 \section{Anhang}
+\begin{sloppypar}
+\tolerance 9999
+1\\
+http://www.pd-f.de/wp-content/uploads/kalins-pdf/singles/themenblatt-die-fahrradwelt-in- zahlen.pdf [Zugang am 03.01.2017, um 11:46 Uhr] \\2\\http://www.monkeylectric.com/monkey\_light\_pro/ [Zugang am 10.01.2017, um 16:56 Uhr; Monkeylectric; Monkey Light Pro]\\3\\https://learn.adafruit.com/neopixels-on-raspberry-pi/software [Zugang am 07.01.2017, um 17:08 Uhr; Toni DiCola; Adafruit-Neopixel-Library]\\
+4\\http://www.elektronik-kompendium.de/sites/com/0902081.htm [Zugang am 9.1.2017, um 15:55 Uhr; Patrick Schnabel; USB-Stecker mit Steckerbelegung]\\5\\https://github.com/python-pillow/Pillow [Zugang am 15.01.2017, um 11:37 Uhr; python- Pillow; Pillow]\\6\\https://www.raspberrypi.org/downloads/raspbian/ [Zugang am 15.1.2017 um 11:54 Uhr; Raspberry Pi Foundation; Raspbian]\\7\\https://i1.wp.com/www.novaspirit.com/wp-content/uploads/2016/10/wireing.jpg?ssl=1 [Zugang am 15.1.2017, um 09:38 Uhr; Novaspirit; USB Male Connector]\\8\\https://www.raspberrypi.org/documentation/configuration/wireless/wireless-cli.md [Zugang am 15.1.2017, um 10:37 Uhr; Raspberry Pi Foundation; WLAN-Verbindung]\\9\\https://www.raspberrypi.org/documentation/configuration/raspi-config.md [Zugang am 15.1.2017, um 10:14 Uhr; Alex Bradbury; Raspberry Pi Konfigurationseinstellungen]\\10\\https://github.com/RubenHaag/Jufo\_Spokescreen [Zugang am 15.1.2017, um 11:59 Uhr; Ruben Haag; Projektordner]\\11\\http://fritzing.org/download/ [Zugang am 18.01.2017, um 13:02 Uhr; Friends-of-Fritzing e.V.; Fritzing]\\12 \\https://www.conrad.de/de/abzweigkasten-l-x-b-x-h-75-x-40-x-37-mm-5229-licht-grau \- - ip54-629536.html? gclid=CPfQ7JrP29ECFcG7GwodF3UFtQ\&insert\_kz=VQ\&hk=SEM\&WT.srch=1\&WT.mc\_id=g oogle\_pla\&s\_kwcid=AL!222!3!173789970902!!!g!!\&ef\_id=WBpFUQAABUMWEwed: 20170124202753:s [Zugang am 26.01.2017, um 16:41 Uhr; Conrad Electronic SE; Platinenbox] \\13\\https://www.notebooksbilliger.de/raspberry+pi+3+model+b+arm+cortex+a53/? nbb=pla.google\_\&wt\_cc2=913-0001\_Hardware\_257367\&gclid=CMeX0KL759ECFYGw7Qod 2q8CRQ [Zugang am 26.01.2017, um 16:45 Uhr; reichelt elektronik GmbH \& Co. KG; Raspberry Pi 3]\\14\\http://www.ebay.de/itm/like/252355489432?lpid=106\&chn=ps\&ul\_noapp=true [Zugang am 27.01.2017, um 15:29 Uhr; eBay Europe S.`a.r.l.; Kabel]\\15 \\
+http://www.ebay.de/itm/WS2812B-5050-RGB-144LED-1M-String-Strip-Lights-Addressable- Waterproof-H3/111860633668? \_trksid=p2141725.c100338.m3726\&\_trkparms=aid\%3D222007\%26algo\%3DSIC.MBE\%26a o\%3D1\%26asc\%3D20150313114020\%26meid\%3D9977e8ae4b7e42c8990b9f5cc22f9914\% 26pid\%3D100338\%26rk\%3D1\%26rkt\%3D21\%26sd\%3D301963844528 [Zugang am 24.01.2017, um 18:47 Uhr; eBay Europe S.`a.r.l.; LED-Streifen] \\16 \\
+https://www.voelkner.de/products/230066/Europlatine-Hartpapier-L-x-B-90-mm-x-50-mm-35- m-Rastermass-2.54-mm-Components-SU527629-In.html? ref=43\&products\_model=S27670\&gclid=CNTZ59rU59ECFc6T7Qodt-oABA [Zugang am 27.01.2017, um 18:06 Uhr; Re-In Retail International GmbH; Platine]\\17\\
+https://www.amazon.de/Anker-PowerCore-Powerbank-Ladeger"at-Smartphone/dp/ B01CU1EC6Y/ref=sr\_1\_1?s=ce- de\&ie=UTF8\&qid=1483383358\&sr=1-1\&keywords=akkupack [Zugang am 27.01.2017, um 16:41 Uhr; Amazon EU S.`a r.l.; Powerbank]\\
+18\\
+Paul Read, Mark-Paul Meyer: \glqq Restoration of motion picture film\grqq, Woburn, MA, USA 2000, S. 24\\
+\\ (Anmerkung: Die Zugangsdaten beziehen sich stets auf den Zeitpunkt des letzten Zugriffes)
+\end{sloppypar}
 \end{document}
