--- a/Arbeit/Arbeit.tex
+++ b/Arbeit/Arbeit.tex
@@ -89,15 +89,31 @@ Falls nach diesem 24Bit Signal, innerhalb der Taktung\textsuperscript{[19]} noch
 Wir haben das Programm in Python 3 geschrieben. Zu Beginn haben wir uns hauptsächlich an dem Programm strandtest.py orientiert, welches in der Adafruit-Neopixel-Library\textsuperscript{3} enthalten ist. Dieses Programm beinhaltete die Abfolge verschiedener Farben, die der LED- Streifen anzeigt. Anhand dieses Programms konnten wir die Reihenfolge und Darstellung der Farbwerte erschließen, welche in diesem Fall GRB ist.
 \subsubsection{Programmabschnitt 1}
 In unserem fertigen Programm importieren wir anfangs die Module time, math und RPi.GPIO und die Libraries neopixel und PIL, welche wir für das später gebrauchen werden. Daraufhin haben wir verschiedene Variablen definiert, welche das Bild mittels der Funktion \textcolor{blue}{$open$}{$()$} der PIL öffnen, es mit der Funktion {$im.$}\textcolor{blue}{$load$}{$()$} laden und uns die Breite und Höhe des Bildes mit {$im.$}\textcolor{blue}{$size$}{$()$} ausgeben. Um das kommende Program effizienter zu gestallten, haben wir hier schon {$breite$} und {$h\text{ö}he$} als die Hälfte der Breite des Bildes und die Hälfte der Höhe des Bildes definiert. Die im Program benötigten Größen, die Anzahl der LEDs, die Nummer des Pins, der den LED-Streifen ansteuert, die Nummer des Pins, der den Magnetschalter ansteuert, die Frequenz der LEDs, der DMA-Kanal, die Helligkeit und die Anzahl der Streifen, werden daraufhin alle definiert. Zusätzlich haben wir diverse Variablen definiert, welche wir für numerische Schleifen oder zum späteren Definieren benötigen.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=16cm]{P1.png}
+	\caption{Programmabschnitt 1}
+\end{figure}
 \subsubsection{Programmabschnitt 2}
 Danach erschaffen wir die Liste {$radien$}, in der wir \textcolor{violet}{$0$} fünfunddreißigmal mit einer numerischen Schleife, die wir mittels der Funktion \textcolor{blue}{$range$}{$()$} mit der Untergrenze \textcolor{violet}{$0$} und der Obergrenze, die der Quotient aus LED\_COUNT und ANZAHL\_STREIFEN ist, erschaffen, einfügen. Der Datentyp des Quotienten ist ein Float. Da die Funktion \textcolor{blue}{$range$}{$()$} nur mit Integer arbeitet, ändern wir den Typen des Quotienten mittels der Funktion \textcolor{blue}{$int$}{$()$} zu einem Integer. Danach erstellen wir eine weitere numerische Schleife für {$i$} (siehe Prog. 1) und denselben Grenzen und erschaffen damit die Radien. Wir ersetzen die \textcolor{violet}{$0$} an {$i$}-ter Stelle durch die Summe aus {$i$}, \textcolor{violet}{$1$}, und der Variablen {$minR$}. Die Addition von \textcolor{violet}{$1$} ist notwendig, da die Aufzählung sonst bei \textcolor{violet}{$0$} begänne. Die Addition von {$minR$} ist nötig, da wir die ersten fünf Radien nicht verwenden können, weil sich dort aufgrund der Radnabe keine LEDs befinden. 
 Da wir {$i$} im Bereich von 0 bis 35 aufzählen, decken wir alle 35 Radien ab, die zuerst \textcolor{violet}{$0$} waren und dann ersetzt werden. Wir haben 35 Radien, da ein Teilstreifen 35 LEDs besitzt.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=16cm]{P2.png}
+	\caption{Programmabschnitt 2}
+\end{figure}
+\newpage
 \subsubsection{Programmabschnitt 3}
 Die zwei Funktionen \textcolor{green}{$line$}{$()$} und \textcolor{green}{$startPrint$}{$()$} beziehen sich auf die Herstellung der Startanzeige.
 Die Funktion \textcolor{green}{$line$} erstellt die Abgrenzungen der Startanzeige. Anfangs wird ein leerer String {$s$} erzeugt. Dieser String erhält dann mit einer numerischen Schleife für {$i$} (siehe Prog. 1) in dem Bereich von \textcolor{violet}{$0$} bis \textcolor{orange}{$l\text{ä}nge$}, welcher in der Funktion startPrint{$()$} gewählt wird, Striche (je nachdem wie \textcolor{orange}{$l\text{ä}nge$} gewählt wird) und wird am Ende der Funktion ausgegeben. Die Funktion \textcolor{green}{$startPrint$}{$()$} gibt die Startanweisung aus. In der Startanweisung werden die wichtigsten Größen für den Benutzter ausgegeben. Als Parameter für die Funktion \textcolor{green}{$line$}{$()$} haben wir \textcolor{violet}{$50$} gewählt, da dies eine geeignete Länge für eine Abgrenzung ist. am Ende wird die Ausgabe erzeugt, dass man das Programm mittels der Tastenkombination Strg-c beenden kann.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=10cm]{Startanzeige.png}
+	\includegraphics[width=16cm]{P3.png}
+	\caption{Programmabschnitt 3}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=8cm]{Startanzeige.png}
 	\caption{Startanzeige}
 \end{figure}
 \subsubsection{Programmabschnitt 4}
@@ -107,14 +123,34 @@ x \approx \cos (\alpha) \cdot r + \frac{\text{Breite \ des \ Bildes}}{2} \\
 y \approx\sin (\alpha) \cdot r + \frac{\text{Höhe\ des\ Bildes}}{2}
 \end{align}
 Im Programm runden wir sie mit der Funktion \textcolor{blue}{$round$}{$()$} auf die erste Dezimalstelle. Danach werden die RGB Werte an den Koordinaten x und y mit der Funktion pix[x, y] (siehe Prog. 1) ausgelesen und mit der Anweisung \textcolor{red}{$return$} \textcolor{blue}{$Color$}(g, r, b) an den LED- Streifen übergeben. Dies geschieht in der Reihenfolge g, r, b (siehe Prog. 1).
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=16cm]{P4.png}
+	\caption{Programmabschnitt 4}
+\end{figure}
 \subsubsection{Programmabschnitt 5}
 In der Funktion \textcolor{green}{$streifenBedienen$}{$()$} werden zuerst die Liste mit den Radien {$radien$}, der LED-Streifen {$streifen$} (siehe Prog. 6) und die im ersten Programmabschnitt voreingestellte Umlaufzeit {$T$}, Zeitabschnitt {$t$} und Winkelgeschwindigkeit \textomega\ globalisiert, da wir diese über mehrere Funktionen benötigen und die Globalisierung effizienter ist, als sie als Parameter zu übergeben. Die Winkel alpha, beta, gamma und delta werden nach Formel 4 berechnet. Die Winkelgeschwindigkeit und der Zeitabschnitt werden jedoch in \textcolor{green}{$main$}{$()$} berechnet. Da die LED-Streifen in einem Winkel von 90$^\circ$ gedreht sind (siehe Anhang Abb. 3), addieren wir zum vorhin berechneten Winkel 90$^\circ$ beziehungsweise
 $\frac{\pi}{2}$
-hinzu. Weil der Zeitabschnitt {$t$} größer wird, wachsen die Winkel an, was die Bewegung der LEDs im Bild simuliert. Dann haben wir {$n$} als Anzahl der Pixel des LED-Streifens, {$u$} als Anzahl der Pixel auf einen Teilstreifen und {$M$} als die Hälfte der Anzahl der Pixel des LED-Streifens definiert. Die erste numerische Schleife zählt bis {$u$} hoch, dabei wird {$i$} um 1 erweitert und {$u$}  um 1 verringert. Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} ermittelt dann für den ersten und dritten Streifen (siehe Anhang Abb. 3) die RGB-Werte. Wir lassen die Radien rückwärts von der Liste {$radien$} aufzählen, indem wir {$u = u - 1$} rechnen. Demnach nimmt bei größer werdendem {$i$} {$u$} von 35 bis 0 ab und in dieser Reihenfolge werden die Radien aus der Liste {$radien$} aufgerufen. Die Radien müssen rückwärts aufgerufen werden, da die PIL das Bild vom Zentrum aus ausliest, der erste und dritte LED-Streifen jedoch von außen angeschlossen sind (siehe Anhang Abb. 3). Da {$u$} in der ersten numerischen Schleife heruntergezählt wurde, mussten wir {$u$} nochmals definieren. Die RGB-Werte werden mit der Nummer der jeweiligen LED der Funktion {$streifen.$}\textcolor{blue}{$setPixelColor$}{$()$} übergeben. Wir erhalten für den ersten Streifen die richtige Reihenfolge, da {$i$} von 0 bis 35 aufgezählt wird und für den dritten Streifen ebenfalls, weil wir {$i$} mit {$M$} addieren, weil der dritte Streifen einen halben Streifen vom ersten entfernt ist. Die zweite numerische Schleife zählt von {$u$} bis {$M$}. Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} gibt die RGB-Werte des zweiten und vierten LED-Streifens an. Die Radien werden diesmal in der richtigen Reihenfolge aus der Liste entnommen, da diese LED-Streifen von innen angeschlossen sind (siehe Anhang Abb. 3). Anschließend werden die RGB-Werte zusammen mit der Nummer der anzustauenden LED an die Funktion {$streifen.$}\textcolor{blue}{$setPixelColor$}{$()$} übergeben. Die Nummerierung der LEDs am zweiten Streifen verläuft von 35 bis 70, da {$i$} in der numerischen Schleife hochgezählt wird. Die Nummerierung der LEDs am vierten Streifen geht von 105 bis 140, weil der Streifen 70 LEDs vom zweiten Streifen entfernt war. Diese Aufzählung erreicht man, indem man {$i$} mit {$M$} addiert. Am Ende von \textcolor{green}{$streifenBedienen$}{$()$} bringt die Funktion {$streifen.$}\textcolor{blue}{$show$}{$()$} die LED-Streifen zum Leuchten. 
+hinzu. Weil der Zeitabschnitt {$t$} größer wird, wachsen die Winkel an, was die Bewegung der LEDs im Bild simuliert. Dann haben wir {$n$} als Anzahl der Pixel des LED-Streifens, {$u$} als Anzahl der Pixel auf einen Teilstreifen und {$M$} als die Hälfte der Anzahl der Pixel des LED-Streifens definiert. Die erste numerische Schleife zählt bis {$u$} hoch, dabei wird {$i$} um 1 erweitert und {$u$}  um 1 verringert. Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} ermittelt dann für den ersten und dritten Streifen (siehe Anhang Abb. 3) die RGB-Werte. Wir lassen die Radien rückwärts von der Liste {$radien$} aufzählen, indem wir {$u = u - 1$} rechnen. Demnach nimmt bei größer werdendem {$i$} {$u$} von 35 bis 0 ab und in dieser Reihenfolge werden die Radien aus der Liste {$radien$} aufgerufen. Die Radien müssen rückwärts aufgerufen werden, da die PIL das Bild vom Zentrum aus ausliest, der erste und dritte LED-Streifen jedoch von außen angeschlossen sind (siehe Anhang Abb. 3). Da {$u$} in der ersten numerischen Schleife heruntergezählt wurde, mussten wir {$u$} nochmals definieren. Die RGB-Werte werden mit der Nummer der jeweiligen LED der Funktion {$streifen.$}\textcolor{blue}{$setPixelColor$}{$()$} übergeben. Wir erhalten für den ersten Streifen die richtige Reihenfolge, da {$i$} von 0 bis 35 aufgezählt wird und für den dritten Streifen ebenfalls, weil wir {$i$} mit {$M$} addieren, weil der dritte Streifen einen halben Streifen vom ersten entfernt ist. Die zweite numerische Schleife zählt von {$u$} bis {$M$}. Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} gibt die RGB-Werte des zweiten und vierten LED-Streifens an. Die Radien werden diesmal in der richtigen Reihenfolge aus der Liste entnommen, da diese LED-Streifen von innen angeschlossen sind (siehe Anhang Abb. 3). Anschließend werden die RGB-Werte zusammen mit der Nummer der anzustauenden LED an die Funktion {$streifen.$}\textcolor{blue}{$setPixelColor$}{$()$} übergeben. Die Nummerierung der LEDs am zweiten Streifen verläuft von 35 bis 70, da {$i$} in der numerischen Schleife hochgezählt wird. Die Nummerierung der LEDs am vierten Streifen geht von 105 bis 140, weil der Streifen 70 LEDs vom zweiten Streifen entfernt war. Diese Aufzählung erreicht man, indem man {$i$} mit {$M$} addiert. Am Ende von \textcolor{green}{$streifenBedienen$}{$()$} bringt die Funktion {$streifen.$}\textcolor{blue}{$show$}{$()$} die LED-Streifen zum Leuchten.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=16cm]{P5.png}
+	\caption{Programmabschnitt 5}
+\end{figure} 
 \subsubsection{Programmabschnitt 6}
-In der Funktion \textcolor{green}{$main$}{$()$} werden zuerst die benötigten Variablen globalisiert. Dies sind die Umlaufzeit {$T$}, der Zeitabschnitt {$t$}, die Zeit seit dem Beginn der Umdrehung {$t1$}, die Liste {$radien$} mit den Radien, der LED-Streifen {$streifen$} und die Winkelgeschwindigkeit \textomega. Danach wird mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(gp.BCM)$} festgelegt, dass GPIO-Nummern verwendet werden. Mit der Anweisung {$gp.$}\textcolor{blue}{$setwarnings$}{$($}\textcolor{violet}{False}{$)$} wird festgelegt, dass keine Warnungen ausgegeben werden, da wir diese nicht benötigen und mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(MAGNET\_PIN, gp.IN)$} wird {$MAGNET\_PIN$} (siehe ersten Programmabschnitt) als Eingang festgelegt. Mit der Methode {$Adafruit\_NeoPixel$} wird mit den Eigenschaften {$LED\_COUNT, LED\_PIN, LED\_FREQ\\ \_HZ, LED\_DMA, LED\_INVERT, LED\_BRIGHTNESS$} das Objekt {$streifen$}, also der LED-Streifen erstellt. Die Funktion {$streifen.$}\textcolor{blue}{$begin$}{$()$} initialisiert den LED-Streifen und die Funktion \textcolor{blue}{$startPrint$}{$()$} gibt die Startanzeige aus. In der darauf folgenden while-Schleife wird festgelegt, dass die Zeit seit dem Beginn der Umdrehung gleich der Systemzeit ist. Danach wird die Bedingung formuliert, dass, falls der Magnetschalter {$MAGNET\_PIN$} nicht auslöst, die Winkelgeschwindigkeit \textomega\ mit der Formel 2 berechnet wird. In dieser if-Anweisung befindet sich eine while-Schleife, welche auslöst, wenn der Magnetschalter nicht auslöst. In dieser while-Schleife wird ein Zeitabschnitt berechnet und da diese while-Schleife mehrere male auslöst werden mehrere Zeitabschnitte berechnet, die man für die Winkelberechnung benötigt (siehe Prog. 5). Ebenfalls wird die Funktion streifenBedienen{$()$} aufgerufen, welche den LED-Streifen dann zum Leuchten bringt. Wenn der Magnetschalter auslöst, also die if-Anweisung nicht zutrifft, wird die Umlaufzeit nach der Formel 1 berechnet. Da wir anfangs (siehe Prog. 1) {$T$} und {$t$} definiert haben, erhalten wir \textcolor{red}{$UnboundLocalError$} nicht. 
+In der Funktion \textcolor{green}{$main$}{$()$} werden zuerst die benötigten Variablen globalisiert. Dies sind die Umlaufzeit {$T$}, der Zeitabschnitt {$t$}, die Zeit seit dem Beginn der Umdrehung {$t1$}, die Liste {$radien$} mit den Radien, der LED-Streifen {$streifen$} und die Winkelgeschwindigkeit \textomega. Danach wird mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(gp.BCM)$} festgelegt, dass GPIO-Nummern verwendet werden. Mit der Anweisung {$gp.$}\textcolor{blue}{$setwarnings$}{$($}\textcolor{violet}{False}{$)$} wird festgelegt, dass keine Warnungen ausgegeben werden, da wir diese nicht benötigen und mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(MAGNET\_PIN, gp.IN)$} wird {$MAGNET\_PIN$} (siehe ersten Programmabschnitt) als Eingang festgelegt. Mit der Methode {$Adafruit\_NeoPixel$} wird mit den Eigenschaften {$LED\_COUNT, LED\_PIN, LED\_FREQ\\ \_HZ, LED\_DMA, LED\_INVERT, LED\_BRIGHTNESS$} das Objekt {$streifen$}, also der LED-Streifen erstellt. Die Funktion {$streifen.$}\textcolor{blue}{$begin$}{$()$} initialisiert den LED-Streifen und die Funktion \textcolor{blue}{$startPrint$}{$()$} gibt die Startanzeige aus. In der darauf folgenden while-Schleife wird festgelegt, dass die Zeit seit dem Beginn der Umdrehung gleich der Systemzeit ist. Danach wird die Bedingung formuliert, dass, falls der Magnetschalter {$MAGNET\_PIN$} nicht auslöst, die Winkelgeschwindigkeit \textomega\ mit der Formel 2 berechnet wird. In dieser if-Anweisung befindet sich eine while-Schleife, welche auslöst, wenn der Magnetschalter nicht auslöst. In dieser while-Schleife wird ein Zeitabschnitt berechnet und da diese while-Schleife mehrere male auslöst werden mehrere Zeitabschnitte berechnet, die man für die Winkelberechnung benötigt (siehe Prog. 5). Ebenfalls wird die Funktion streifenBedienen{$()$} aufgerufen, welche den LED-Streifen dann zum Leuchten bringt. Wenn der Magnetschalter auslöst, also die if-Anweisung nicht zutrifft, wird die Umlaufzeit nach der Formel 1 berechnet. Da wir anfangs (siehe Prog. 1) {$T$} und {$t$} definiert haben, erhalten wir \textcolor{red}{$UnboundLocalError$} nicht.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=16cm]{P6.png}
+	\caption{Programmabschnitt 6}
+\end{figure} 
 \subsubsection{Programmabschnitt 7}
 Die Funktion \textcolor{blue}{$main$}{$()$} wird aufgerufen, indem eine if-Anweisung auslöst, wenn der Name des Programms {$main$} ist, was hier der Fall ist.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=16cm]{P7.png}
+	\caption{Programmabschnitt 7}
+\end{figure}
 \subsection{Aufbau und Montage}
 \subsubsection{Installation des Raspberry Pi{'}s}
 Als erstes haben wir eine microSD-Karte mit dem Betriebssystem Raspbian\textsuperscript{6}\ bespielt und haben einen WLAN-USB-Stick von seinem Gehäuse entnommen und nach einem Bild\textsuperscript{7} mit dem Raspberry Pi Zero verbunden. Danach haben wir die SD-Karte in einen Computer gesteckt und haben in die Datei {$/etc/wpa\_supplicant/wpa\_supplicant.conf$} Netzwerkdetails hinzugefügt\textsuperscript{8}.
@@ -125,13 +161,13 @@ Nun haben wir git, den Github Client für Linux, auf dem Raspberry Pi installier
 	\includegraphics[width=10cm]{u.png}
 	\caption{Schaltplan}
 \end{figure}
-\newpage
+\\
 Der Raspberry Pi ist mit einem seiner Ground-Pins mit der Masse verbunden und mit einem der beiden 5-Volt-Pins direkt mit der Spannungsquelle verbunden. Der LED Streifen ist ebenfalls mit dem 5-Volt- und Ground-Pin verbunden und wird über den GPIO-18-Pin des Raspberry Pis angesteuert, da dieser als einer der wenigen die für die Ansteuerung des Streifens essentielle Pulsweitenmodulation (PWM) unterstützt. Um die Zeit nun einmal pro Umdrehung zu messen, verwenden wir das Reed-Relais (Magnetschalter) eines Fahrradtachos. Durch diese Relais fließt, wenn er in die Nähe des an der Gabel befestigten Magneten kommt, Strom, da sich die Kontakte im Relais schließen, welcher über den GPIO-17-Pin des Raspberry Pis ausgelesen wird. Zur Absicherung des Raspberry Pis gegen eventuelle Spannungsschwankungen ist der Magnetschalter zusätzlich noch über einen Widerstand von 7M\textOmega\ mit dem Ground-Pin verbunden. Die Stromversorgung liefern zwei USB-Powerbanks mit je 5000 mAh. Sie liefern eine konstante Spannung von je 5 V, besitzen eine relativ hohe Energiedichte und sind trotzdem vergleichsweise leicht. Diese sind parallel geschaltet, damit die Spannung den Raspberry Pi nicht überlastet, und stellen die Stromversorgung mit 5 V dar. Die Powerbanks haben wir angeschlossen, indem wir zwei USB Kabel abisoliert und mit Standard-Pin-Anschlüssen versehen haben (Polung siehe Lit. [4]). Diesen Schaltplan haben wir zuerst auf einem Breadboard zusammengebaut, um zu testen, ob die LED-Streifen und der Magnetschalter funktionieren. Als einen ersten Test für den LED- Streifen haben wir das bei der Adafruit NeoPixel Library\textsuperscript{3} mitgelieferte Programm \glqq Strandtest.py\grqq\ verwendet.
 \subsubsection{Aufbau und Funktion des ersten Tests mit dem LED-Streifen}
 Für den Magnetschalter haben wir ein Programm geschrieben, um die Zeit zwischen zwei Signalen von diesem zu messen (siehe Programm).
 Da alle Komponenten ohne Probleme funktionierten, haben wir nun den LED-Streifen in vier Teile á 36 LEDs geteilt und für einen größeren Spielraum haben wir von jedem Streifen eine LED entfernt. Zuerst haben wir versucht, die vier unterschiedlichen LED-Streifen an vier unterschiedlichen GPIO-Pins anzuschließen, bis wir festgestellten, dass der verwendete Raspberry Pi 3 und der Raspberry Pi Zero, den wir später anschließen wollten, nur 6 GPIO- Pins haben, die PWM unterstützen. Um auf jeder Seite vier LED-Streifen anzubringen, hätten wir jedoch mindestens 8 Pins benötigt, also haben wir die vier LED-Streifen in Reihe geschaltet und so nur den PWM fähigen GPIO-18-Pin verwendet.
 Daraufhin haben wir den Schaltplan auf eine Platine übertragen und die vier LED-Streifen durch unterschiedlich lange Kabelstücke miteinander verbunden, um sie später entsprechend auf dem Reifen zu platzieren. Die Platine haben wir nun in eine wasserdichte Verteilerbox eingebaut und mit Kabelbindern an den Speichen befestigt.
-Nach ersten misslungenen Versuchen mit Kunststoffhalterungen haben wir uns aus Stabilitätsgründen für eine Märklin-Metall-Halterung entschieden, um die Elektronik sicher an dem Speichenrad zu befestigen. Die Halterung haben wir um die Nabe herum in einem rechtwinkligen Kreuz angeordnet. Dann haben wir die LED-Streifen auf feste Kunststoffstreifen geklebt und diese dann mit Kabelbindern an dem Metallkreuz befestigt. Dieses wurde wiederum an einer Fahrradgabel montiert und fixiert. Dann haben wir die Felge über einen Märklin Metall-Motor angetrieben, um eine gleichbleibende, einstellbare Geschwindigkeit zu erhalten, die der Geschwindigkeit eines durchschnittlichen Fahrradfahrers entspricht. Der finale Aufbau ist in Abb. 5 dargestellt:
+Nach ersten misslungenen Versuchen mit Kunststoffhalterungen haben wir uns aus Stabilitätsgründen für eine Märklin-Metall-Halterung entschieden, um die Elektronik sicher an dem Speichenrad zu befestigen. Die Halterung haben wir um die Nabe herum in einem rechtwinkligen Kreuz angeordnet. Dann haben wir die LED-Streifen auf feste Kunststoffstreifen geklebt und diese dann mit Kabelbindern an dem Metallkreuz befestigt. Dieses wurde wiederum an einer Fahrradgabel montiert und fixiert. Dann haben wir die Felge über einen Märklin Metall-Motor angetrieben, um eine gleichbleibende, einstellbare Geschwindigkeit zu erhalten, die der Geschwindigkeit eines durchschnittlichen Fahrradfahrers entspricht. Der finale Aufbau ist in Abb. 14 dargestellt:
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=9.5cm]{Rad.png}
@@ -155,13 +191,13 @@ Unser Speichendisplay ist dazu noch günstiger als vergleichbare Modelle. Wie ma
 Nach einem ersten Start unseres Programmes haben wir festgestellt, dass der Raspberry Pi Zero, den wir wegen seiner geringen Größe und seinem kaum spürbaren Gewicht verwenden wollten, viel zu langsam ist, um ein hochauflösendes Bild darzustellen (siehe Abb. 7a). Der deutlich schnellere Raspberry Pi 3 erstellt hierbei einen viel besseres Bild (siehe Abb. 7b). Dies sieht man auch auf den beiden Bildern:
 \begin{figure}[h]
 \centering
-\subfigure[Smily mit Raspberry Pi Zero]{\includegraphics[width=5.5cm]{Smily0.png}} 
-\subfigure[Smily mit Raspberry Pi 3]{\includegraphics[width=5.5cm]{Smily3.png}}
+\subfigure[Smily mit Raspberry Pi Zero]{\includegraphics[width=5.0cm]{Smily0.png}} 
+\subfigure[Smily mit Raspberry Pi 3]{\includegraphics[width=5.0cm]{Smily3.png}}
 \caption{Vergleich zwischen dem Raspberry Pi Zero und dem Raspberry Pi 3}
 \end{figure}
 \\Aus diesem Grund haben wir uns für den schnelleren Raspberry Pi 3 entschieden, den wir auch in Zukunft weiter verwenden werden. Der passt jedoch leider in keine für uns momentan verfügbare wasserdichte Verteilerbox. Daher ist das Speichendisplay momentan an einem Fahrrad noch nicht bei jedem Wetter einsetzbar.
 \subsection{Geplante Verbesserungen}
-Wir haben vor, unsere gesamte Apparatur wasserfest zu machen, damit man bei fast allen Wetterbedingungen mit dem Speichendisplay fahren kann. Im Laufe der weiteren Projektweiterentwicklung wollen wir die LED-Ansteuerung-Software durch selbstentwickelte Software ersetzen, um dieses Projekt ganz unser Eigen nennen zu können. Zum Steuern des Raspberry Pi planen wir den Raspberry Pi eine Website hosten zu lassen, auf die ein Nutzer über eine Wlan Verbindung zum Raspberry Pi zugreifen und Bilder von seinem Endgerät auf den Raspberry Pi hochladen kann. Zusätzlich möchten wir insgesamt drei Magnetsensoren an das Rad montieren, um damit die Drehrichtung des Rades zu ermitteln. So können wir das Bild unabhängig von der Drehrichtung darstellen.
+Wir haben vor, unsere gesamte Apparatur wasserfest zu machen, damit man bei fast allen Wetterbedingungen mit dem Speichendisplay fahren kann. Im Laufe der weiteren Projektweiterentwicklung wollen wir die LED-Ansteuerung-Software durch selbstentwickelte Software ersetzen, um dieses Projekt ganz unser Eigen nennen zu können. Zum Steuern des Raspberry Pi planen wir den Raspberry Pi eine Website hosten zu lassen, auf die ein Nutzer über eine W-LAN Verbindung zum Raspberry Pi zugreifen und Bilder von seinem Endgerät auf den Raspberry Pi hochladen kann. Zusätzlich möchten wir insgesamt drei Magnetsensoren an das Rad montieren, um damit die Drehrichtung des Rades zu ermitteln. So können wir das Bild unabhängig von der Drehrichtung darstellen.
 \section{Zusammenfassung}
 Alles in allem ist das Speichendisplay eine interaktive, multifunktionale, kostengünstige und sicherheitsfördernde Anzeige, die jedoch noch kleine Kinderkrankheiten hat. Mit diesem Speichendisplay erhoffen wir uns, mehr Menschen zum sicheren Fahrradfahren, auch im Dunkeln, zu begeistern.
 \section{Anhang}
@@ -202,14 +238,13 @@ https://www.amazon.de/Anker-PowerCore-Powerbank-Ladeger"at-Smartphone/dp/ B01CU\
 Paul Read, Mark-Paul Meyer: \glqq Restoration of motion picture film\grqq, Woburn, MA, USA 2000, S. 24\\
 18)\\
 Annette Lauber, Petra Schmalstieg: \glqq Band 2: Wahrnehemen und Beobachten\grqq, Stuttgart 2012, S. 9\\
-\\
 19) \\
 https://cdn-shop.adafruit.com/datasheets/WS2812B.pdf[Zugang am 20.2., um 8:00 Uhr; ; Dateblatt des LED-Streifens]
 (Anmerkung: Die Zugangsdaten beziehen sich stets auf den Zeitpunkt des letzten Zugriffes)
 
-
 \subsection{Danksagungen}
 Wir vom Projekt \glqq Speichendisplay\grqq\ bedanken uns sehr bei der Fahrradwerkstatt der Holzkirche Lichterfelde für die Spende einer Fahrradgabel, ohne die unser Projekt nicht möglich gewesen wäre. Ebenfalls bedanken wir uns bei unserem Betreuer René Gorriz vom Paulsen-Gymnasium, der uns bei unserem Projekt tatkräftig unterstützt.
+\newpage
 \subsection{Kostenkalkulation und Materialliste}
 \begin{figure}[h]
 	\centering
