--- a/Arbeit/Arbeit.tex
+++ b/Arbeit/Arbeit.tex
@@ -10,16 +10,25 @@
 \usepackage[T1]{fontenc}
 \usepackage{subfigure}
 \usepackage{subscript}
+\title{Bikelight}
+\author{Farid Akbar Tabrizi, Jakob Degmair \& Ruben Haag}
+\date{}
 \begin{document}
+\maketitle
+\begin{figure}[h]
+\centering
+\includegraphics[width=16.0cm]{Smily3.png}
+\end{figure}
+\newpage
 \tableofcontents
 \newpage
 \section{Einleitung}
-In Deutschland gibt es nach Daten des Zweirad-Industrie-Verbands\textsuperscript{1} (ZIV) 72 Millionen Fahrräder und 98\% der Deutschen können nach eigenen Angaben Fahrrad fahren\textsuperscript{1}. Trotzdem würden nur 38\% der Deutschen mehrmals in der Woche ihr Rad nutzen\textsuperscript{1}. Dies liegt nach eigener Erfahrung vor allem daran, dass man sich im Stadtverkehr in einem Auto sicherer fühlt, als auf einem Fahrrad. Natürlich kann man sich geeignete Kleidungsstücke, die die eigene Sichtbarkeit erhöhen, kaufen, aber diese sind meistens lästig und sind wenig modisch. Um diese Kleidungsstücke zu vermeiden, haben wir nach einer technisch besseren und interaktiveren Lösungsmöglichkeit gesucht. Wir dachten uns, dass die optimale Lösung ein Leuchtmittel zwischen den Speichen wäre und fanden bei unserer Suche eine ähnliche Lösungsansätze. Bei dem Besuch der Website der Firma Monkeylectrics\textsuperscript{2}\ haben wir etwas ähnliches gefunden: ein Speichendisplay, das jedoch mit rund 2000\euro\textsuperscript{2}\ nur wenige Fahrradfahrer ansprechen würde. Da haben wir uns gefragt, wie ein solches Speichendisplay kostengünstiger und besser herzustellen ist. Die Grundidee war, dass wir mit einem einfachen Raspberry Pi einen farbigen LED-Streifen ansteuern. Danach haben wir uns einen 1m langen LED-Streifen gekauft, bei dem man jede Diode einzeln mit dem Raspberry Pi ansteuern kann. Der Streifen besitzt dabei eine Dichte von 144 LEDs je Meter und hat somit ausreichend viele LEDs, um ein Bild in ansprechender Auflösung darzustellen. Wir haben uns erhofft, eine interaktive Variante zur Warnweste zu finden, indem zum Beispiel beim Überqueren einer Kreuzung vom Speichendisplay ein Stoppschild angezeigt wird, wodurch ein von der Seite kommender Autofahrer frühzeitig gewarnt wird. Das Speichendisplay und die Software sollen als Selbstbausatz für Fahrradfahrer aller Altersklassen zur Verfügung gestellt werden.
+In Deutschland gibt es nach Daten des Zweirad-Industrie-Verbands\textsuperscript{1} (ZIV) 72 Millionen Fahrräder und 98\% der Deutschen können nach eigenen Angaben Fahrrad fahren\textsuperscript{1}. Trotzdem würden nur 38\% der Deutschen mehrmals in der Woche ihr Rad nutzen\textsuperscript{1}. Dies liegt nach eigener Erfahrung vor allem daran, dass man sich im Stadtverkehr in einem Auto sicherer fühlt, als auf einem Fahrrad. Natürlich kann man sich geeignete Kleidungsstücke, die die eigene Sichtbarkeit erhöhen, kaufen, aber diese sind meistens lästig und sind wenig modisch. Um diese Kleidungsstücke zu vermeiden, haben wir nach einer technisch besseren und interaktiveren Lösungsmöglichkeit gesucht. Wir dachten uns, dass die optimale Lösung ein Leuchtmittel zwischen den Speichen wäre und fanden bei unserer Suche ähnliche Lösungsansätze. Bei dem Besuch der Website der Firma Monkeylectrics\textsuperscript{2}\ haben wir etwas ähnliches gefunden: ein Speichendisplay, das jedoch mit rund 2000\euro\textsuperscript{2}\ nur wenige Fahrradfahrer ansprechen würde. Da haben wir uns gefragt, wie ein solches Speichendisplay kostengünstiger und besser herzustellen ist. Die Grundidee war, dass wir mit einem einfachen Raspberry Pi einen farbigen LED-Streifen ansteuern. Danach haben wir uns einen 1m langen LED-Streifen gekauft, bei dem man jede Diode einzeln mit dem Raspberry Pi ansteuern kann. Der Streifen besitzt dabei eine Dichte von 144 LEDs je Meter und hat somit ausreichend viele LEDs, um ein Bild in ansprechender Auflösung darzustellen. Wir haben uns erhofft, eine interaktive Variante zur Warnweste zu finden, indem zum Beispiel beim Überqueren einer Kreuzung vom Speichendisplay ein Stoppschild angezeigt wird, wodurch ein von der Seite kommender Autofahrer frühzeitig gewarnt wird. Das Speichendisplay und die Software sollen als Selbstbausatz für Fahrradfahrer aller Altersklassen zur Verfügung gestellt werden.
 \section{Problemstellung}
 Die Sicherheit von Fahrradfahrern im Straßenverkehr soll durch ein interaktives Speichendisplay für Fahrräder erhöht werden. Dabei sollen Bilder und Informationen während der Fahrt mit der Außenwelt geteilt werden.
 \section{Vorgehensweise, Materialien und Methode}
 \subsection{Grundidee}
-Unsere Idee, um das Bild anzeigen zu können, ist, dass wir an einem Speichenrad mehrere LED-Streifen befestigen, die dann jeweils den Teil des Bildes darstellen, an dem sie sich momentan befinden. Die LED-Streifen rotieren dann mit dem Rad, was dazu führt, dass der Betrachter, aufgrund der Trägheit der Augen, ein vollständiges Bild wahrnimmt.
+Unsere Idee, um das Bild anzeigen zu können, ist, dass wir an einem Speichenrad mehrere LED-Streifen befestigen, die dann jeweils den Teil des Bildes darstellen, an dem sie sich momentan befinden. Die LED-Streifen rotieren dann mit dem Rad, dies führt dazu, dass der Betrachter, aufgrund der Trägheit der Augen, ein vollständiges Bild wahrnimmt.
 Diesen Sachverhalt haben wir physikalisch folgendermaßen beschrieben:
 
 \subsection{Physikalische Beschreibung}
@@ -28,30 +37,26 @@ Als erstes brauchen wir die Umlaufzeit T. Diese berechnen wir, indem die Zeitdif
 \begin{align}
 T &= t_{Ende} - t_{Anfang}
 \end{align}
-Die Winkelgeschwindigkeit \textomega\ des Reifens wird nun über die Winkeländerung pro Zeit berechnet. Da die Zeit für eine Umdrehung gemessen wird, entspricht die Winkeländerung in Radiant 2\textpi. Die Formel lautet demnach:
+Die Winkelgeschwindigkeit \textomega\ des Reifens wird nun über die Winkeländerung pro Zeit berechnet. Da die Zeit für eine Umdrehung gemessen wird, entspricht die Winkeländerung in Radiant 2\textpi. Die Gleichung lautet demnach:
 \begin{align}
 \omega\ &= \frac{2 \pi}{T}
+\label{omega}
 \end{align}
-Für die während der Umdrehung laufenden Berechnungen brauchen wir die Zeit, die seit Beginn der Umdrehung vergangen ist. Diese berechnen wir über die Zeitdifferenz \textDelta t zwischen der Anfangszeit t\textsubscript{Anfang} der Umdrehung und der momentanen Zeit t\textsubscript{Momentan} (für die genauere Beschreibung von t\textsubscript{Momentan} siehe Programmcode):
+Für die während der Umdrehung laufenden Berechnungen brauchen wir die Zeit, die seit Beginn der Umdrehung vergangen ist. Diese berechnen wir über die Zeitdifferenz \textDelta t zwischen der Anfangszeit t\textsubscript{Anfang} der Umdrehung und der momentanen Zeit t\textsubscript{Momentan} (für die genauere Beschreibung von t\textsubscript{Momentan} siehe 3.5 Programmabschnitt 6):
 \begin{align}
 \Delta t &= t_{Momemtan} - t_{Anfang}
 \end{align}
-Um nun damit den aktuellen Drehwinkel zu berechnen, stellen wir die Formel für die Winkelgeschwindigkeit (Formel 1), diesmal aber für den Winkel \textalpha\  und die Zeitdifferenz \textDelta t, nach \textalpha\  um.  
+Um nun damit den aktuellen Drehwinkel zu berechnen, stellen wir die Gleichung für die Winkelgeschwindigkeit (Gleichung 2), diesmal aber für den Winkel \textalpha\  und die Zeitdifferenz \textDelta t, nach \textalpha\  um.  
 \begin{align}
 \alpha\ &= \omega \cdot \Delta t 
 \end{align}
-Damit jede LED eine Position bei einem bestimmten Winkel hat, haben wir die Bewegung in einem Koordinatensystem dargestellt. Um nun die Koordinaten einer LED zu berechnen, nutzen wir die beiden Grundgleichungen des Einheitskreises a = cos(\textalpha) und
-b = sin(\textalpha). Da diese jedoch für den Radius von 1 Längeneinheit gelten, multiplizieren wir diese noch mit dem Radius der anzusteuernden LED:
+Damit jede LED eine Position bei einem bestimmten Winkel hat, haben wir die Bewegung in einem Koordinatensystem dargestellt. Um nun die Koordinaten einer LED zu berechnen, nutzen wir die beiden Grundgleichungen des Einheitskreises $a_1 = cos(\alpha)$ und
+$b_1 = sin(\alpha)$ in Polarkoordinaten. Da diese jedoch für den Radius von 1 Längeneinheit gelten, multiplizieren wir diese noch mit dem Radius der anzusteuernden LED:
 \begin{align}
 a &= \cos (\alpha) \cdot r \\
 b &= \sin (\alpha) \cdot r 
 \end{align}
 Der Mittelpunkt des Koordinatensystems des Kreises, auf dem sich eine einzelne LED bewegt, ist noch auf dem Punkt A(0\big|0), wie auf Abb. 2 zu sehen ist. \\
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=12cm]{dia1.png}
-	\caption{Kreisbewegung mit Mittelpunkt bei A(0\big|0)}
-\end{figure}\\
 Das Problem ist nun, dass die Pixel eines Bildes nur positive Koordinaten haben. Dies lässt sich dadurch korrigieren, dass man zu den x-Koordinaten die Hälfte der Breite des Bildes und zu den y-Koordinaten die Hälfte der Höhe des Bildes addiert:
 \begin{align}
 x &= \cos (\alpha) \cdot r + \frac{Breite \ des \ Bildes}{2} \\
@@ -59,42 +64,46 @@ y &= \sin (\alpha) \cdot r +  \frac{\text{Höhe\ des\ Bildes}}{2}
 \end{align}
 Wir addieren die Hälfte der Höhe des Bildes und die Hälfte der Breite des Bildes, da dies die Mindestgröße ist, damit sich der Graph im ersten Quadranten befindet. Dadurch verändert sich der Mittelpunkt, wie auf Abb. 2 zu sehen ist, auf den Punkt M(35\big|35).
 \begin{figure}[h]
-	\centering
-	\includegraphics[width=12cm]{dia2.png}
-	\caption{Kreisbewegung mit Mittelpunkt bei M(35\big|35)}
-\end{figure}\\
+\centering
+\subfigure[Kreisbewegung mit Mittelpunkt bei A(0\big|0)]{\includegraphics[width=5.0cm]{dia1.png}} 
+\hspace{0.15\textwidth}
+\subfigure[Kreisbewegung mit Mittelpunkt bei A(35\big|35)]{\includegraphics[width=5.0cm]{dia2.png}}
+\caption{Verschiebung des Kreiszentrums}
+\end{figure}
 \\Diese physikalischen Aspekte haben wir in unserem Programm folgendermaßen umgesetzt:
 \subsection{Welche Mindestgeschwindigkeit wird gebraucht?}
-Das menschliche Auge nimmt Bilder in einer Frequenz f\textsubscript{Auge} von 10 bis 12Hz auf\textsuperscript{17}. Um die Geschwindigkeit bei rund 10Hz zu berechnen, verwenden wir die Formel $v = \frac{\Delta s}{\Delta t}$. Auf die Kreisbewegung angewandt entspr"ache dies $v = \frac{2\pi r}{T}$ in $\frac{m}{s}$. Da $\frac{1}{T}$ der Frequenz entspricht, der Umrechnungsfaktor von $\frac{m}{s}$ in $\frac{km}{h}$ 3,6 ist und $d = 2 \cdot r$ gilt, erhalten wir die Formel $v = \pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6$. Durch das Anbringen der vier Streifen am Rad, ben"otigen wir nur ein viertel der urspr"ungliche Geschwindigkeit. Demnach gilt: 
+Das menschliche Auge nimmt Bilder in einer Frequenz f\textsubscript{Auge} von 10 bis 12Hz auf\textsuperscript{17}. Um die Geschwindigkeit bei rund 10Hz zu berechnen, verwenden wir die Gleichung $v = \frac{\Delta s}{\Delta t}$. Auf die Kreisbewegung angewandt entspr"ache dies $v = \frac{2\pi r}{T}$ in $\frac{m}{s}$. Da $\frac{1}{T}$ der Frequenz entspricht, der Umrechnungsfaktor von $\frac{m}{s}$ in $\frac{km}{h}$ 3,6 ist und $d = 2 \cdot r$ gilt, erhalten wir die Gleichung $v = \pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6$. Durch das Anbringen der vier Streifen am Rad, ben"otigen wir nur ein viertel der urspr"ungliche Geschwindigkeit. Demnach gilt: 
 \begin{align}
 v = \frac{\pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6}{4}
 \end{align}
 Also beträgt die Mindestgeschwindigkeit rund $v \approx 17\frac{km}{h}$ bei einem 24\grqq\ Rad, um ein vollständiges Bild zu erkennen. Die Geschwindigkeit, bei der schon ein Bild zu erkennen ist, ist jedoch kleiner, weil das Gehirn ein Bild selbst vervollständigt. Dem Gehirn genügt es, einige Konturen wahrzunehmen, um ein Bild oder Objekt zu erkennen, da es den Rest aus Erfahrung und Fantasie ergänzt\textsuperscript{18}.
 \subsection{Ansteuerung des Led Streifens}
-Der verwendete LED-Streifen hat die Mod so werden diese an die zweite LED übertragen, die wiederum nur die ersten 24bit für sich selbst übernimmt und den Rest weiterschickt usw.. ellnummer ws2812b und wird wie folgt angesteuert\textsuperscript{[19]}:
+Der verwendete LED-Streifen hat die Mod so werden diese an die zweite LED übertragen, die wiederum nur die ersten 24bit für sich selbst übernimmt und den Rest weiterschickt usw.. ellnummer ws2812b und wird wie folgt angesteuert\textsuperscript{19}:
 Jede Led des LED-Streifens wird durch ein 24bit Signal angesteuert, das mittels Pulsweitenmodulation vom Raspberry Pi auf diesen übertragen wird. Die Farbanteile Grün, Rot und Blau werden je über acht bit angesteuert, so dass man pro pixel 2\textsuperscript 8 also 256 und mit allen drei LEDs 16.777.216 verschiedene Farben anzeigen kann. Die Reihenfolge der Farbansteuerung ist in folgendem Diagramm verdeutlicht:
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=17cm]{AufbauDer24BitAnsteuerungDesStreifens.png}
+	\includegraphics[width=16cm]{AufbauDer24BitAnsteuerungDesStreifens.png}
 	\caption{Reihenfolge der Bits bei der Ansteuerung einer LED des LED-streifens}
 \end{figure}\\
-Falls nach diesem 24Bit Signal, innerhalb der Taktung\textsuperscript{[19]} noch weitere Signale an den LED-Streifen übertragen werden, so werden diese über den DOUT(siehe Abbildung 4) anschluss an die zweite LED übertragen, die wiederum nur die ersten 24bit für sich selbst übernimmt und den Rest weiterschickt usw.. 
+Falls nach diesem 24Bit Signal, innerhalb der Taktung\textsuperscript{19} noch weitere Signale an den LED-Streifen übertragen werden, so werden diese über den DOUT(siehe Abbildung 4) anschluss an die zweite LED übertragen, die wiederum nur die ersten 24bit für sich selbst übernimmt und den Rest weiterschickt usw.. 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=5cm]{Schaltplan_des_LED-Streifens.png}
-	\caption{Schaltplan des Led-streifens\textsuperscript{[19]}}
+	\includegraphics[width=4cm]{Schaltplan_des_LED-Streifens.png}
+	\caption{Schaltplan des Led-streifens\textsuperscript{19}}
 \end{figure}
 
 \subsection{Programm}
 Wir haben das Programm in Python 3 geschrieben. Zu Beginn haben wir uns hauptsächlich an dem Programm strandtest.py orientiert, welches in der Adafruit-Neopixel-Library\textsuperscript{3} enthalten ist. Dieses Programm beinhaltete die Abfolge verschiedener Farben, die der LED- Streifen anzeigt. Anhand dieses Programms konnten wir die Reihenfolge und Darstellung der Farbwerte erschließen, welche in diesem Fall GRB ist.
-\subsubsection{Programmabschnitt 1}
-In unserem fertigen Programm importieren wir anfangs die Module time, math und RPi.GPIO und die Libraries neopixel und PIL, welche wir für das später gebrauchen werden. Daraufhin haben wir verschiedene Variablen definiert, welche das Bild mittels der Funktion \textcolor{blue}{$open$}{$()$} der PIL öffnen, es mit der Funktion {$im.$}\textcolor{blue}{$load$}{$()$} laden und uns die Breite und Höhe des Bildes mit {$im.$}\textcolor{blue}{$size$}{$()$} ausgeben. Wie man im Prog. 4 später sieht ist es egal, ob das Bild RGB-Werte oder CMYK-Werte besitzt. Um das kommende Program effizienter zu gestallten, haben wir hier schon {$breite$} und {$h\text{ö}he$} als die Hälfte der Breite des Bildes und die Hälfte der Höhe des Bildes definiert. Die im Program benötigten Größen, die Anzahl der LEDs, die Nummer des Pins, der den LED-Streifen ansteuert, die Nummer des Pins, der den Magnetschalter ansteuert, die Frequenz der LEDs, der DMA-Kanal, die Helligkeit und die Anzahl der Streifen, werden daraufhin alle definiert. Zusätzlich haben wir diverse Variablen definiert, welche wir für numerische Schleifen oder zum späteren Definieren benötigen.
+\\
+\\
+\textbf{\large Programmabschnitt 1:}\\
+In unserem fertigen Programm importieren wir anfangs die Module time, math und RPi.GPIO und die Libraries neopixel und PIL, welche wir für das später gebrauchen werden. Daraufhin haben wir verschiedene Variablen definiert, welche das Bild mittels der Funktion \textcolor{blue}{$open$}{$()$} der PIL öffnen, es mit der Funktion {$im.$}\textcolor{blue}{$load$}{$()$} laden und uns die Breite und Höhe des Bildes mit {$im.$}\textcolor{blue}{$size$}{$()$} ausgeben. Wie man im Prog. 4 später sieht ist es egal, ob das Bild RGB-Werte oder CMYK-Werte besitzt. Um das kommende Program effizienter zu gestalten, haben wir hier schon {$breite$} und {$h\text{ö}he$} als die Hälfte der Breite des Bildes und die Hälfte der Höhe des Bildes definiert. Die im Program benötigten Größen, die Anzahl der LEDs, die Nummer des Pins, der den LED-Streifen ansteuert, die Nummer des Pins, der den Magnetschalter ansteuert, die Frequenz der LEDs, der DMA-Kanal, die Helligkeit und die Anzahl der Streifen, werden daraufhin alle definiert. Zusätzlich haben wir diverse Variablen definiert, welche wir für numerische Schleifen oder zum späteren Definieren benötigen.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=16cm]{P1.png}
 	\caption{Programmabschnitt 1}
 \end{figure}
-\subsubsection{Programmabschnitt 2}
+\\\textbf{\large Programmabschnitt 2:}\\
 Danach erschaffen wir die Liste {$radien$}, in der wir \textcolor{violet}{$0$} fünfunddreißigmal mit einer numerischen Schleife, die wir mittels der Funktion \textcolor{blue}{$range$}{$()$} mit der Untergrenze \textcolor{violet}{$0$} und der Obergrenze, die der Quotient aus LED\_COUNT und ANZAHL\_STREIFEN ist, erschaffen, einfügen, da man nicht solch eine Liste in der zweiten numerischen Schleife erschaffen kann, inder man die Radien als einzelne Werte in die Liste einfügt. Der Datentyp des Quotienten ist ein Float. Da die Funktion \textcolor{blue}{$range$}{$()$} nur mit Integer arbeitet, ändern wir den Typen des Quotienten mittels der Funktion \textcolor{blue}{$int$}{$()$} zu einem Integer. Danach erstellen wir eine weitere numerische Schleife für {$i$} (siehe Prog. 1) und denselben Grenzen und erschaffen damit die Radien. Wir ersetzen die \textcolor{violet}{$0$} an {$i$}-ter Stelle durch die Summe aus {$i$}, \textcolor{violet}{$1$}, und der Variablen {$minR$}. Die Addition von \textcolor{violet}{$1$} ist notwendig, da die Aufzählung sonst bei \textcolor{violet}{$0$} begänne. Die Addition von {$minR$} ist nötig, da wir die ersten fünf Radien nicht verwenden können, weil sich dort aufgrund der Radnabe keine LEDs befinden. 
 Da wir {$i$} im Bereich von 0 bis 35 aufzählen, decken wir alle 35 Radien ab, die zuerst \textcolor{violet}{$0$} waren und dann ersetzt werden. Wir haben 35 Radien, da ein Teilstreifen 35 LEDs besitzt.
 \begin{figure}[h]
@@ -102,10 +111,10 @@ Da wir {$i$} im Bereich von 0 bis 35 aufzählen, decken wir alle 35 Radien ab, d
 	\includegraphics[width=16cm]{P2.png}
 	\caption{Programmabschnitt 2}
 \end{figure}
-\newpage
-\subsubsection{Programmabschnitt 3}
+\\
+\textbf{\large Programmabschnitt 3:}\\
 Die zwei Funktionen \textcolor{green}{$line$}{$()$} und \textcolor{green}{$startPrint$}{$()$} beziehen sich auf die Herstellung der Startanzeige.
-Die Funktion \textcolor{green}{$line$} erstellt die Abgrenzungen der Startanzeige. Anfangs wird ein leerer String {$s$} erzeugt. Dieser String erhält dann mit einer numerischen Schleife für {$i$} (siehe Prog. 1) in dem Bereich von \textcolor{violet}{$0$} bis \textcolor{orange}{$l\text{ä}nge$}, welcher in der Funktion startPrint{$()$} gewählt wird, Striche (je nachdem wie \textcolor{orange}{$l\text{ä}nge$} gewählt wird) und wird am Ende der Funktion ausgegeben. Die Funktion \textcolor{green}{$startPrint$}{$()$} gibt die Startanweisung aus. In der Startanweisung werden die wichtigsten Größen für den Benutzter ausgegeben. Als Parameter für die Funktion \textcolor{green}{$line$}{$()$} haben wir \textcolor{violet}{$50$} gewählt, da dies eine geeignete Länge für eine Abgrenzung ist. am Ende wird die Ausgabe erzeugt, dass man das Programm mittels der Tastenkombination Strg-c beenden kann.
+Die Funktion \textcolor{green}{$line$} erstellt die Abgrenzungen der Startanzeige. Anfangs wird ein leerer String {$s$} erzeugt. Dieser String erhält dann mit einer numerischen Schleife für {$i$} (siehe Prog. 1) in dem Bereich von \textcolor{violet}{$0$} bis \textcolor{orange}{$l\text{ä}nge$}, welcher in der Funktion startPrint{$()$} gewählt wird, Striche (je nachdem wie \textcolor{orange}{$l\text{ä}nge$} gewählt wird) und wird am Ende der Funktion ausgegeben. Die Funktion \textcolor{green}{$startPrint$}{$()$} gibt die Startanweisung aus. In der Startanweisung werden die wichtigsten Größen für den Benutzter ausgegeben. Als Parameter für die Funktion \textcolor{green}{$line$}{$()$} haben wir \textcolor{violet}{$50$} gewählt, da dies eine geeignete Länge für eine Abgrenzung ist. Am Ende wird die Ausgabe erzeugt, dass man das Programm mittels der Tastenkombination Strg-c beenden kann.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=16cm]{P3.png}
@@ -113,11 +122,13 @@ Die Funktion \textcolor{green}{$line$} erstellt die Abgrenzungen der Startanzeig
 \end{figure}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=8cm]{Startanzeige.png}
+	\includegraphics[width=7cm]{Startanzeige.png}
 	\caption{Startanzeige}
 \end{figure}
-\subsubsection{Programmabschnitt 4}
-Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} gibt zu jeder Position der LEDs die x- und y-Koordinaten und die dazugehörigen RGB-Werte im Bild aus. Die x- und die y-Koordinate werden mit den Formeln 7 und 8 (siehe Physikalische Beschreibung) berechnet. Da die Funktionen \textcolor{blue}{$sin$}{$()$} und \textcolor{blue}{$cos$}{$()$} auf fünfzehn Stellen genau die Koordinaten ausgegeben, wir sie allerdings nur mit einer Dezimalstelle genau benötigen, werden die Formeln 7 und 8 folgendermaßen geändert:
+\newpage
+
+\textbf{\large Programmabschnitt 4:}\\
+Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} gibt zu jeder Position der LEDs die x- und y-Koordinaten und die dazugehörigen RGB-Werte im Bild aus. Die x- und die y-Koordinate werden mit den Gleichungen 7 und 8 (siehe Physikalische Beschreibung) berechnet. Da die Funktionen \textcolor{blue}{$sin$}{$()$} und \textcolor{blue}{$cos$}{$()$} auf fünfzehn Stellen genau die Koordinaten ausgegeben, wir sie allerdings nur mit einer Dezimalstelle genau benötigen, werden die Gleichungen 7 und 8 folgendermaßen geändert:
 \begin{align}
 x \approx \cos (\alpha) \cdot r + \frac{\text{Breite \ des \ Bildes}}{2} \\
 y \approx\sin (\alpha) \cdot r + \frac{\text{Höhe\ des\ Bildes}}{2}
@@ -128,8 +139,8 @@ Im Programm runden wir sie mit der Funktion \textcolor{blue}{$round$}{$()$} auf 
 	\includegraphics[width=16cm]{P4.png}
 	\caption{Programmabschnitt 4}
 \end{figure}
-\subsubsection{Programmabschnitt 5}
-In der Funktion \textcolor{green}{$streifenBedienen$}{$()$} werden zuerst die Liste mit den Radien {$radien$}, der LED-Streifen {$streifen$} (siehe Prog. 6) und die im ersten Programmabschnitt voreingestellte Umlaufzeit {$T$}, Zeitabschnitt {$t$} und Winkelgeschwindigkeit \textomega\ globalisiert, da wir diese über mehrere Funktionen benötigen und die Globalisierung effizienter ist, als sie als Parameter zu übergeben. Die Winkel alpha, beta, gamma und delta werden nach Formel 4 berechnet. Die Winkelgeschwindigkeit und der Zeitabschnitt werden jedoch in \textcolor{green}{$main$}{$()$} berechnet. Da die LED-Streifen in einem Winkel von 90$^\circ$ gedreht sind (siehe Anhang Abb. 3), addieren wir zum vorhin berechneten Winkel 90$^\circ$ beziehungsweise
+\\\textbf{\large Programmabschnitt 5:}\\
+In der Funktion \textcolor{green}{$streifenBedienen$}{$()$} werden zuerst die Liste mit den Radien {$radien$}, der LED-Streifen {$streifen$} (siehe Prog. 6) und die im ersten Programmabschnitt voreingestellte Umlaufzeit {$T$}, Zeitabschnitt {$t$} und Winkelgeschwindigkeit \textomega\ globalisiert, da wir diese über mehrere Funktionen benötigen und die Globalisierung effizienter ist, als sie als Parameter zu übergeben. Die Winkel $alpha,\ beta,\ gamma$ und $delta$ werden nach Gleichung 4 berechnet. Die Winkelgeschwindigkeit und der Zeitabschnitt werden jedoch in \textcolor{green}{$main$}{$()$} berechnet. Da die LED-Streifen in einem Winkel von 90$^\circ$ gedreht sind, addieren wir zum vorhin berechneten Winkel 90$^\circ$ beziehungsweise
 $\frac{\pi}{2}$
 hinzu. Weil der Zeitabschnitt {$t$} größer wird, wachsen die Winkel an, was die Bewegung der LEDs im Bild simuliert. Dann haben wir {$n$} als Anzahl der Pixel des LED-Streifens, {$u$} als Anzahl der Pixel auf einen Teilstreifen und {$M$} als die Hälfte der Anzahl der Pixel des LED-Streifens definiert. Die erste numerische Schleife zählt bis {$u$} hoch, dabei wird {$i$} um 1 erweitert und {$u$}  um 1 verringert. Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} ermittelt dann für den ersten und dritten Streifen (siehe Anhang Abb. 3) die RGB-Werte. Wir lassen die Radien rückwärts von der Liste {$radien$} aufzählen, indem wir {$u = u - 1$} rechnen. Demnach nimmt bei größer werdendem {$i$} {$u$} von 35 bis 0 ab und in dieser Reihenfolge werden die Radien aus der Liste {$radien$} aufgerufen. Die Radien müssen rückwärts aufgerufen werden, da die PIL das Bild vom Zentrum aus ausliest, der erste und dritte LED-Streifen jedoch von außen angeschlossen sind (siehe Anhang Abb. 3). Da {$u$} in der ersten numerischen Schleife heruntergezählt wurde, mussten wir {$u$} nochmals definieren. Die RGB-Werte werden mit der Nummer der jeweiligen LED der Funktion {$streifen.$}\textcolor{blue}{$setPixelColor$}{$()$} übergeben. Wir erhalten für den ersten Streifen die richtige Reihenfolge, da {$i$} von 0 bis 35 aufgezählt wird und für den dritten Streifen ebenfalls, weil wir {$i$} mit {$M$} addieren, weil der dritte Streifen einen halben Streifen vom ersten entfernt ist. Die zweite numerische Schleife zählt von {$u$} bis {$M$}. Die Funktion \textcolor{green}{$bildAuslesen$}{$()$} gibt die RGB-Werte des zweiten und vierten LED-Streifens an. Die Radien werden diesmal in der richtigen Reihenfolge aus der Liste entnommen, da diese LED-Streifen von innen angeschlossen sind (siehe Anhang Abb. 3). Anschließend werden die RGB-Werte zusammen mit der Nummer der anzustauenden LED an die Funktion {$streifen.$}\textcolor{blue}{$setPixelColor$}{$()$} übergeben. Die Nummerierung der LEDs am zweiten Streifen verläuft von 35 bis 70, da {$i$} in der numerischen Schleife hochgezählt wird. Die Nummerierung der LEDs am vierten Streifen geht von 105 bis 140, weil der Streifen 70 LEDs vom zweiten Streifen entfernt war. Diese Aufzählung erreicht man, indem man {$i$} mit {$M$} addiert. Am Ende von \textcolor{green}{$streifenBedienen$}{$()$} bringt die Funktion {$streifen.$}\textcolor{blue}{$show$}{$()$} die LED-Streifen zum Leuchten.
 \begin{figure}[h]
@@ -137,14 +148,14 @@ hinzu. Weil der Zeitabschnitt {$t$} größer wird, wachsen die Winkel an, was di
 	\includegraphics[width=16cm]{P5.png}
 	\caption{Programmabschnitt 5}
 \end{figure} 
-\subsubsection{Programmabschnitt 6}
-In der Funktion \textcolor{green}{$main$}{$()$} werden zuerst die benötigten Variablen globalisiert. Dies sind die Umlaufzeit {$T$}, der Zeitabschnitt {$t$}, die Zeit seit dem Beginn der Umdrehung {$t1$}, die Liste {$radien$} mit den Radien, der LED-Streifen {$streifen$} und die Winkelgeschwindigkeit \textomega. Danach wird mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(gp.BCM)$} festgelegt, dass GPIO-Nummern verwendet werden. Mit der Anweisung {$gp.$}\textcolor{blue}{$setwarnings$}{$($}\textcolor{violet}{False}{$)$} wird festgelegt, dass keine Warnungen ausgegeben werden, da wir diese nicht benötigen und mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(MAGNET\_PIN, gp.IN)$} wird {$MAGNET\_PIN$} (siehe ersten Programmabschnitt) als Eingang festgelegt. Mit der Methode {$Adafruit\_NeoPixel$} wird mit den Eigenschaften {$LED\_COUNT, LED\_PIN, LED\_FREQ\\ \_HZ, LED\_DMA, LED\_INVERT, LED\_BRIGHTNESS$} das Objekt {$streifen$}, also der LED-Streifen erstellt. Die Funktion {$streifen.$}\textcolor{blue}{$begin$}{$()$} initialisiert den LED-Streifen und die Funktion \textcolor{blue}{$startPrint$}{$()$} gibt die Startanzeige aus. In der darauf folgenden while-Schleife wird festgelegt, dass die Zeit seit dem Beginn der Umdrehung gleich der Systemzeit ist. Danach wird die Bedingung formuliert, dass, falls der Magnetschalter {$MAGNET\_PIN$} nicht auslöst, die Winkelgeschwindigkeit \textomega\ mit der Formel 2 berechnet wird. In dieser if-Anweisung befindet sich eine while-Schleife, welche auslöst, wenn der Magnetschalter nicht auslöst. In dieser while-Schleife wird ein Zeitabschnitt berechnet und da diese while-Schleife mehrere male auslöst werden mehrere Zeitabschnitte berechnet, die man für die Winkelberechnung benötigt (siehe Prog. 5). Ebenfalls wird die Funktion streifenBedienen{$()$} aufgerufen, welche den LED-Streifen dann zum Leuchten bringt. Wenn der Magnetschalter auslöst, also die if-Anweisung nicht zutrifft, wird die Umlaufzeit nach der Formel 1 berechnet. Da wir anfangs (siehe Prog. 1) {$T$} und {$t$} definiert haben, erhalten wir \textcolor{red}{$UnboundLocalError$} nicht.
+\\\textbf{\large Programmabschnitt 6:}\\
+In der Funktion \textcolor{green}{$main$}{$()$} werden zuerst die benötigten Variablen globalisiert. Dies sind die Umlaufzeit {$T$}, der Zeitabschnitt {$t$}, die Zeit seit dem Beginn der Umdrehung {$t1$}, die Liste {$radien$} mit den Radien, der LED-Streifen {$streifen$} und die Winkelgeschwindigkeit \textomega. Danach wird mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(gp.BCM)$} festgelegt, dass GPIO-Nummern verwendet werden. Mit der Anweisung {$gp.$}\textcolor{blue}{$setwarnings$}{$($}\textcolor{violet}{False}{$)$} wird festgelegt, dass keine Warnungen ausgegeben werden, da wir diese nicht benötigen und mit der Anweisung {$gp.$}\textcolor{blue}{$setmode$}{$(MAGNET\_PIN, gp.IN)$} wird {$MAGNET\_PIN$} (siehe ersten Programmabschnitt) als Eingang festgelegt. Mit der Methode {$Adafruit\_NeoPixel$} wird mit den Eigenschaften {$LED\_COUNT, LED\_PIN, LED\_FREQ\\ \_HZ, LED\_DMA, LED\_INVERT, LED\_BRIGHTNESS$} das Objekt {$streifen$}, also der LED-Streifen erstellt. Die Funktion {$streifen.$}\textcolor{blue}{$begin$}{$()$} initialisiert den LED-Streifen und die Funktion \textcolor{blue}{$startPrint$}{$()$} gibt die Startanzeige aus. In der darauf folgenden while-Schleife wird festgelegt, dass die Zeit seit dem Beginn der Umdrehung gleich der Systemzeit ist. Danach wird die Bedingung formuliert, dass, falls der Magnetschalter {$MAGNET\_PIN$} nicht auslöst, die Winkelgeschwindigkeit \textomega\ mit der Gleichung 2 berechnet wird. In dieser if-Anweisung befindet sich eine while-Schleife, welche erfüllt ist, wenn der Magnetschalter nicht auslöst. In dieser while-Schleife wird ein Zeitabschnitt berechnet und da diese while-Schleife mehrere male auslöst, werden mehrere Zeitabschnitte berechnet, die man für die Winkelberechnung benötigt (siehe Prog. 5). Ebenfalls wird die Funktion streifenBedienen{$()$} aufgerufen, welche den LED-Streifen dann zum Leuchten bringt. Wenn der Magnetschalter auslöst, also die if-Anweisung nicht zutrifft, wird die Umlaufzeit nach der Gleichung 1 berechnet. Da wir anfangs (siehe Prog. 1) {$T$} und {$t$} definiert haben, erhalten wir keinen \textcolor{red}{$UnboundLocalError$}.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=16cm]{P6.png}
 	\caption{Programmabschnitt 6}
 \end{figure} 
-\subsubsection{Programmabschnitt 7}
+\\\textbf{\large Programmabschnitt 7:}\\
 Die Funktion \textcolor{blue}{$main$}{$()$} wird aufgerufen, indem eine if-Anweisung auslöst, wenn der Name des Programms {$main$} ist, was hier der Fall ist.
 \begin{figure}[h]
 	\centering
@@ -174,7 +185,7 @@ Nach ersten misslungenen Versuchen mit Kunststoffhalterungen haben wir uns aus S
 	\caption{Skizze des Aufbaus}
 \end{figure}
 \subsection{Welche Mindestgeschwindigkeit wird gebraucht?}
-Das menschliche Auge nimmt Bilder in einer Frequenz f\textsubscript{Auge} von 10 bis 12Hz auf\textsuperscript{17}. Um die Geschwindigkeit bei rund 10Hz zu berechnen, verwenden wir die Formel $v = \frac{\Delta s}{\Delta t}$. Auf die Kreisbewegung angewandt entspr"ache dies $v = \frac{2\pi r}{T}$ in $\frac{m}{s}$. Da $\frac{1}{T}$ der Frequenz entspricht, der Umrechnungsfaktor von $\frac{m}{s}$ in $\frac{km}{h}$ 3,6 ist und $d = 2 \cdot r$ gilt, erhalten wir die Formel $v = \pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6$. Durch das Anbringen der vier Streifen am Rad, ben"otigen wir nur ein viertel der urspr"ungliche Geschwindigkeit. Demnach gilt: 
+Das menschliche Auge nimmt Bilder in einer Frequenz f\textsubscript{Auge} von 10 bis 12Hz auf\textsuperscript{17}. Um die Geschwindigkeit bei rund 10Hz zu berechnen, verwenden wir die Gleichung $v = \frac{\Delta s}{\Delta t}$. Auf die Kreisbewegung angewandt entspr"ache dies $v = \frac{2\pi r}{T}$ in $\frac{m}{s}$. Da $\frac{1}{T}$ der Frequenz entspricht, der Umrechnungsfaktor von $\frac{m}{s}$ in $\frac{km}{h}$ 3,6 ist und $d = 2 \cdot r$ gilt, erhalten wir die Gleichung $v = \pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6$. Durch das Anbringen der vier Streifen am Rad, ben"otigen wir nur ein viertel der urspr"ungliche Geschwindigkeit. Demnach gilt: 
 \begin{align}
 v = \frac{\pi \cdot f\textsubscript{Auge} \cdot d \cdot 3,6}{4}
 \end{align}
